# sin-net-reports

./: .dockerignore  .editorconfig  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile.webapi  IMPLEMENTATION_SUMMARY.md  LOCAL_STACK.md  README.md  README.md.bak  SECURITY.md  docker-compose.yaml  docker-compose.yml  index.html  ingress-nginx.yaml  package-lock.json  service-webapp-svc.yaml  sharing-types.md  sonar-project.properties  structure.puml
.attic/: README.md
.components/: README.md  config.yaml  subscription.yaml
.db/: Dockerfile.dev  README.md
.devcontainer/: devcontainer-lock.json  devcontainer.json
.docs/: ADR-006_observability-strategy.md  ADR_001_uservices_cooperation.md  ADR_002_events_serialization.md  ADR_003_model_mapping.md  ADR_003_run_local_stack.md  ADR_004_run_local_stack.md  ADR_005_expose_expected_environment_variables.md  Business.puml  C1.puml  DATABASE.md  MIGRATION-APPLICATION-INSIGHTS-INIT-CONTAINER.md  Management.puml
.github/: copilot-instructions.md  dependabot.yml
.incubator/: README.md
api/: api-pipeline.yaml
api.graphql/: schema.graphqls
app-time/: APPLICATION_INSIGHTS_SETUP.md  Dockerfile.e2e  RUNTIME_CONFIG.md  graphql-codegen-config.yml  package-lock.json  package.json
app_time/: APPLICATION_INSIGHTS_SETUP.md  Dockerfile.e2e  README.md  RUNTIME_CONFIG.md  (+5 more)
webapi-v1/src/: pyproject.toml
webapi-v1/src/app/: schema.py  settings.py  urls.py
webapi-v1/src/timesheets/: apps.py  models.py  schema.py  signals.py  test_schema.py
webapi-v1/src/timesheets/migrations/: 0001_initial.py
webapi-v1/src/users/: schema.py
(+3132 files in other folders)
